Fixed alignment issues and cleaned up css file of unnecessary code

--- a/Investment Guru/css/aboutus_style.css
+++ b/Investment Guru/css/aboutus_style.css
@@ -9,7 +9,7 @@ body {
 .avatar {
     display: inline-block;
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 10%;
     border: 1px;
     background-color: #ffffff;
     box-shadow     : 0 1px 4px 0 rgba(0, 0, 0, 0.14);
@@ -53,6 +53,10 @@ body {
     outline: none;
 }
 
+.container {
+    padding: 0px;
+}
+
 .card {
     display        : inline-block;
     position       : relative;
@@ -87,27 +91,60 @@ body {
     padding:20px;
 }
 
-.contact-section h2, .idea-section h2,.team-section h2,.social-section h4,.working-section h2,.choose-section h2  {
+/* Section Styles start */
+
+.contact-section h3, .idea-section h3,.team-section h3,.social-section h3,.working-section h3 ,.choose-section h3 {
     color: #e74c3c;
-    margin-top: 0px;
-    margin-bottom: 50px;
-    text-align: center;
     text-transform: uppercase;
-    font-size: 24px;
 }
 
-.social-section h4,.choose-section h2,.choose-section h4,.choose-section p {
-    color: #FFFFFF;
-}
-
-.choose-section h4,.choose-section p {
-    margin: 15px; 
+.idea-section , .working-section,.social-section {
+    text-align: center;
 }
 
 .contact-section ,.team-section,.choose-section {
     padding: 0px 40px;
     text-align: center;
 }
+
+.social-section h3,.choose-section h3,.choose-section h4,.choose-section p {
+    color: #FFFFFF;
+}
+
+.idea-section p, .form-group label, .list-group-item, .working-section h4 {  
+    color: #525558;
+}
+
+.choose-section h4,.choose-section p,.choose-section h3,.contact-section h3,.idea-section h3, .social-section h3,.team-section h3,.team-section h4,.working-section h3 {
+    margin-bottom: 20px; 
+    margin-top: 0px;
+}
+
+.choose-section h4 , .idea-section h3{
+    margin-top: 20px; 
+}
+
+.choose-section h3 {
+    margin-bottom: 40px;
+}
+
+.working-section h4 {
+    margin-bottom: 20px;
+}
+
+.idea-section p { 
+    font-size: 18px;
+    text-align: left;
+}
+
+.section {
+    position: relative;
+    margin: 0px;
+    padding: 30px 0px;
+    background-color: white;
+}
+
+/* Section Styles end */
 
 .form-control {
     height   : 40px;
@@ -124,19 +161,6 @@ input[type=text]:focus,input[type=email]:focus, .form-group textarea:focus {
     border        : 1px solid #e74c3c;
     border-radius : 3px;
     box-shadow    : none;
-}
-
-.idea-section {
-    text-align: center;
-}
-
-.idea-section p { 
-    font-size: 18px;
-    text-align: left;
-}
-
-.idea-section p, .form-group label, .list-group-item {  
-    color: #525558;
 }
 
 .idea-section img {
@@ -163,7 +187,7 @@ input[type=text]:focus,input[type=email]:focus, .form-group textarea:focus {
     text-align: center;
 }
 
-.list-group, .idea-section h2 {
+.list-group, .idea-section h3 {
     border: none;
     text-align: left;
 }
@@ -180,23 +204,9 @@ input[type=text]:focus,input[type=email]:focus, .form-group textarea:focus {
 
 }
 
-.pointer {
-    display:flex;
-	justify-content:center;
-	align-items: center;
-	flex-flow: column;
-}
-
-.social-button img {
-    height: 50px;
-    width: 50px;
-}
-
-.section {
-    position: relative;
-    margin: 0px;
-    padding: 30px 0px;
-    background-color: white;
+.social-button a {
+    color: white;
+    margin: 0px 10px;
 }
 
 .map-section {
@@ -215,19 +225,8 @@ input[type=text]:focus,input[type=email]:focus, .form-group textarea:focus {
     background-color: #232731;
 }
 
-.working {
-    margin: 10px 30px;   
-    text-align: center; 
-}
-
-.working img {
+.working-section img {
     width: 150px;
     height: 150px;
     padding: 30px;
-}
-
-.working h4 , .social-section {
-    font-size: 18px;
-    color: #525558;
-    text-align: center;
 }
